--- a/public/ejpt/a2_footprinting_scanning.html
+++ b/public/ejpt/a2_footprinting_scanning.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Chkkn notes</title>
   <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css">
 </head>
