--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     </head>
     <body>
       <h2>notes</h2>
+      <form>
+        <input type="text" placeholder="Search...">
+        <button type="submit">Search</button>
+      </form>
         <a href="appsec/broken_authorisation.html">appsec/broken_authorisation</a><br/><a href="appsec/broken_cryptography.html">appsec/broken_cryptography</a><br/><a href="ejpt/a1_information_gathering.html">ejpt/a1_information_gathering</a><br/><a href="ejpt/a2_footprinting_scanning.html">ejpt/a2_footprinting_scanning</a><br/><a href="git.html">git</a><br/><a href="nodejs.html">nodejs</a><br/><a href="typescript.html">typescript</a><br/>
     </body>
     </html>
