--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,6 @@
-<html>
+
+    <!DOCTYPE html>
+    <html>
     <head>
       <title>Chkkn notes</title>
     </head>
@@ -6,8 +8,12 @@
       <h2>notes</h2>
       <form>
         <input type="text" placeholder="Search...">
-        <button type="submit">Search</button>
+        <button type="submit">Search</button><br>
+        <select id="search-results"></select>
       </form>
-        <a href="appsec/broken_authorisation.html">appsec/broken_authorisation</a><br/><a href="appsec/broken_cryptography.html">appsec/broken_cryptography</a><br/><a href="ejpt/a1_information_gathering.html">ejpt/a1_information_gathering</a><br/><a href="ejpt/a2_footprinting_scanning.html">ejpt/a2_footprinting_scanning</a><br/><a href="git.html">git</a><br/><a href="nodejs.html">nodejs</a><br/><a href="typescript.html">typescript</a><br/>
+
+        <a href="appsec/broken_authorisation.html">appsec/broken_authorisation</a><br/><a href="appsec/broken_cryptography.html">appsec/broken_cryptography</a><br/><a href="aws/intro_aws_security.html">aws/intro_aws_security</a><br/><a href="ejpt/a1_information_gathering.html">ejpt/a1_information_gathering</a><br/><a href="git.html">git</a><br/><a href="nodejs.html">nodejs</a><br/><a href="typescript.html">typescript</a><br/>
+      <script src="https://unpkg.com/fuse.js/dist/fuse.min.js"></script>
+      <script src="fuzzy.js"></script>
     </body>
     </html>
