--- a/public/aws/intro_aws_security.html
+++ b/public/aws/intro_aws_security.html
@@ -18,6 +18,11 @@
 <li>Automatic encryption on AWS gloabl and region networks.</li>
 </ul>
 <h2>Inventory and Configuration Management</h2>
+<ul>
+<li>deployment tools for creation and decommisioning AWS resources</li>
+<li>identitfy AWS resources, track and manage.</li>
+<li></li>
+</ul>
 <h2>Data Encryption</h2>
 <h2>Identity and Access Control</h2>
 <h2>Monitoring and Logging</h2>
