--- a/public/js.html
+++ b/public/js.html
@@ -350,6 +350,7 @@ addOne(); // 1
 # When calling the function without an argument the default value is set to 0.
 </code></pre>
 <h4>Function to arrow functions</h4>
+<p>node</p>
 
   </div>
 
