--- a/public/js.html
+++ b/public/js.html
@@ -350,7 +350,12 @@ addOne(); // 1
 # When calling the function without an argument the default value is set to 0.
 </code></pre>
 <h4>Function to arrow functions</h4>
-<p>node</p>
+<p>Benefits of arrow function:</p>
+<ol>
+<li>Shorter to write.</li>
+<li>Uses lexical scope.</li>
+<li>Benefit from implicit return.</li>
+</ol>
 
   </div>
 
