--- a/public/git.html
+++ b/public/git.html
@@ -44,6 +44,9 @@ git branch -D &lt;branchName&gt;
 git push origin --delete &lt;branchName&gt;
 
 </code></pre>
+<h2>Authenticating github cli</h2>
+<p>Generate personal token <a href="https://github.com/settings/personal-access-tokens/new">https://github.com/settings/personal-access-tokens/new</a>
+Login with username and token as password.</p>
 
   </div>
 
