--- a/public/ejpt/a1_information_gathering.html
+++ b/public/ejpt/a1_information_gathering.html
@@ -45,7 +45,15 @@ Information to look for:</p>
 e.g. <code>whois zonetransfer.me</code> or <code>whois 172.67.155.53</code> or <a href="https://whois.org">https://whois.org</a></li>
 </ul>
 <h3>Footprinting with Netcraft</h3>
-<p>Use to gather information about the target domain</p>
+<p>Use to gather information about the target domain. <a href="https://www.netcraft.com/">https://www.netcraft.com/</a></p>
+<ul>
+<li>Background</li>
+<li>Network</li>
+<li>SSL/TLS</li>
+<li>Hosting history</li>
+<li>Web trackers</li>
+<li>Site technology</li>
+</ul>
 <h3>DNS Recon</h3>
 <h3>WAF with wafwoof</h3>
 <h3>Subdomain Enumeration with Sublist3r</h3>
