--- a/public/ejpt/a1_information_gathering.html
+++ b/public/ejpt/a1_information_gathering.html
@@ -55,6 +55,18 @@ e.g. <code>whois zonetransfer.me</code> or <code>whois 172.67.155.53</code> or <
 <li>Site technology</li>
 </ul>
 <h3>DNS Recon</h3>
+<p>Records associated with a domain.
+Looking for:</p>
+<ul>
+<li>Nameserver</li>
+<li>A record</li>
+<li>AAAA record</li>
+<li>MX record</li>
+</ul>
+<p><strong>dnsrecon</strong><br>
+<code>dnsrecon -d zonetransfer.me</code></p>
+<p><strong>DNSdumpster</strong>
+<a href="https://dnsdumpster.com/">https://dnsdumpster.com/</a></p>
 <h3>WAF with wafwoof</h3>
 <h3>Subdomain Enumeration with Sublist3r</h3>
 <h3>Google Dorks</h3>
