--- a/public/ejpt/a1_information_gathering.html
+++ b/public/ejpt/a1_information_gathering.html
@@ -65,7 +65,7 @@ Looking for:</p>
 </ul>
 <p><strong>dnsrecon</strong><br>
 <code>dnsrecon -d zonetransfer.me</code></p>
-<p><strong>DNSdumpster</strong>
+<p><strong>DNSdumpster</strong><br>
 <a href="https://dnsdumpster.com/">https://dnsdumpster.com/</a></p>
 <h3>WAF with wafwoof</h3>
 <h3>Subdomain Enumeration with Sublist3r</h3>
