--- a/public/ejpt/a1_information_gathering.html
+++ b/public/ejpt/a1_information_gathering.html
@@ -83,7 +83,7 @@ wafw00f hackertube.net -a
 
 sublist3r -d hackersploit.org
 </code></pre>
-<p><strong>Note: there maybe no results because the search engine are blocking the requests</strong></p>
+<p><em>Note: there maybe no results because the search engine are blocking the requests</em></p>
 <h3>Google Dorks</h3>
 <h3>Email Harvesting with theHarvester</h3>
 <h3>Leaked Password Databases</h3>
