--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         <select id="search-results"></select>
       </form>
 
-        <a href="aws/intro_aws_security.html">aws/intro_aws_security</a><br/><a href="cloudflare.html">cloudflare</a><br/><a href="ejpt/a1_information_gathering.html">ejpt/a1_information_gathering</a><br/><a href="git.html">git</a><br/><a href="js.html">js</a><br/><a href="nodejs.html">nodejs</a><br/><a href="typescript.html">typescript</a><br/><a href="web_security/broken_authorisation.html">web_security/broken_authorisation</a><br/><a href="web_security/broken_cryptography.html">web_security/broken_cryptography</a><br/><a href="web_security/ssrf.html">web_security/ssrf</a><br/>
+        <a href="aws/intro_aws_security.html">aws/intro_aws_security</a><br/><a href="cloudflare.html">cloudflare</a><br/><a href="ejpt/a1_information_gathering.html">ejpt/a1_information_gathering</a><br/><a href="git.html">git</a><br/><a href="js.html">js</a><br/><a href="networking/dns.html">networking/dns</a><br/><a href="nodejs.html">nodejs</a><br/><a href="typescript.html">typescript</a><br/><a href="web_security/broken_authorisation.html">web_security/broken_authorisation</a><br/><a href="web_security/broken_cryptography.html">web_security/broken_cryptography</a><br/><a href="web_security/ssrf.html">web_security/ssrf</a><br/>
       <script src="https://unpkg.com/fuse.js/dist/fuse.min.js"></script>
       <script src="fuzzy.js"></script>
     </body>
