--- a/public/ejpt/a1_information_gathering.html
+++ b/public/ejpt/a1_information_gathering.html
@@ -124,7 +124,7 @@ DNS Records - A, AAAA, NS, MX, CNAME, TXT, HINFO, SOA, SRC, PTR</p>
 <li>DNS server admin wants to copy or transer zone files from one server to another.</li>
 <li>Misconfigured and left unsecured can be abused by attacker, provider pentester with holistic view of an org's network layout, internal network addresses may be found on org's DNS servers.</li>
 </ul>
-<p><strong>Host files</strong>
+<p><strong>Host files</strong><br>
 /etc/hosts</p>
 <h3>Host Discovery with Nmap</h3>
 <h3>Port Scanning with Nmap</h3>
