--- a/public/web_security/broken_authorisation.html
+++ b/public/web_security/broken_authorisation.html
@@ -5,6 +5,7 @@
   <title>Chkkn notes</title>
   <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
   <a href="/">back</a>
