--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <html>
     <head>
       <title>Chkkn notes</title>
-      <link rel="stylesheet" type="text/css" href="/css/style.css">
+      <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
       <h2>notes</h2>
