--- a/public/appsec/application_security_foundations.html
+++ b/public/appsec/application_security_foundations.html
@@ -48,7 +48,21 @@ Security sprint, partnership model.</li>
 <ol>
 <li>Code it the same repository. AppSec team can run tests  on the code. Gitlab, GitHub, Bit Bucket.</li>
 <li>Setup Weekly Software Composition Analysis + secret scanning (hash, password, connection string, API key), tells out of date frameworks &amp; libraries and find security vulnerability.</li>
+<li>Setup Weekly SAST scans. Tune tool.</li>
+<li>Automate tickets. Beware of false-positives.</li>
+<li>Penetration test of three mission critical applications.</li>
 </ol>
+<h3>Example 3</h3>
+<p>Spreading security awareness and promoting positive culture change.</p>
+<ol>
+<li>Security Champion Program. Train them on code review and threat modelling.</li>
+<li>Review each pull request for security.</li>
+<li>Secure code training for everyone.</li>
+<li>Provide documentation support.</li>
+</ol>
+<h2>AppSec Activities</h2>
+<p>TACTICS: The acutal means used to gain an objective. (AppSec activities that we do to get to our goals).
+STRATEGY: The overall campaign plan. (Goals - the final place you want to be).</p>
 
   </div>
 
