--- a/public/appsec/application_security_foundations.html
+++ b/public/appsec/application_security_foundations.html
@@ -63,6 +63,30 @@ Security sprint, partnership model.</li>
 <h2>AppSec Activities</h2>
 <p>TACTICS: The acutal means used to gain an objective. (AppSec activities that we do to get to our goals).
 STRATEGY: The overall campaign plan. (Goals - the final place you want to be).</p>
+<h3>Vulnerability Assessment scans</h3>
+<p>Quick Scan\QA: commonly called Dynamic Application Security Testing(DAST), Web proxy, Web App Scanner. Automated tool that interact with the web app and give you results.</p>
+<p>Vulnerability/Security assessment: Talking to people, assessing the whole system, running multiple tools and verifying all the security components.</p>
+<h3>Threat Modelling</h3>
+<p>Conversation between a security person, product owner/business owner/clients, lead dev etc.
+What are the threats to the system.  Try to <strong>mitigate</strong>, <strong>reduce</strong> or <strong>accept</strong> those threats.
+Threat modelling started with Microsoft. Book: Threat Modeling: Designing for Security by Adam Shostack.</p>
+<p>Informal threat modelling</p>
+<ul>
+<li>What does this app do?</li>
+<li>What could go wrong?</li>
+<li>What keeps you up at night?</li>
+<li>How would you hack your app?</li>
+</ul>
+<p>Methodology</p>
+<ul>
+<li>S.T.R.I.D.E</li>
+<li>P.A.S.T.A (Risk &amp; Governance)</li>
+<li>Attack Trees</li>
+</ul>
+<h3>Secure Code Review</h3>
+<p>Usually paired with Static Application Security Testing (SAST).
+All you do is review the security controls where security problems might happen.
+E.g. login screen, password, authentication, make the some sort of security control is there and is implemented correctly.</p>
 
   </div>
 
