--- a/public/appsec/application_security_foundations.html
+++ b/public/appsec/application_security_foundations.html
@@ -87,6 +87,18 @@ Threat modelling started with Microsoft. Book: Threat Modeling: Designing for Se
 <p>Usually paired with Static Application Security Testing (SAST).
 All you do is review the security controls where security problems might happen.
 E.g. login screen, password, authentication, make the some sort of security control is there and is implemented correctly.</p>
+<h3>Software Composition Analysis</h3>
+<p>SCA focuses on the third party components, libraries, frameworks, plugins, packages.
+Can manually google the third party components or use tool.</p>
+<h3>Penetration Testing</h3>
+<p>Set out a scope on what to test and attempt to find as many vulnerabilities using tools and manual techniques, try to exploit to prove if its vulnerable.</p>
+<h3>Developer Education and Advocacy</h3>
+<p>Education Program: Educate developers about security, what you expect from them in regards from security. What are the policies to be followed, laws to be followed (GDPR, HIPPA, PCI DSS), security design, security architecture, threat modelling.</p>
+<p>Advocacy Program: Doing culture change in the organisation so people think security is more fun, absolutely necessary, a part of quality.</p>
+<h3>Responsible Disclosure and Bug Bounties</h3>
+<p>Responsible disclosure/coordinated disclosure: penetration tester, security researcher finding security problems or bugs and reporting it to the vendor.</p>
+<p>Katie Missouri invented bug bounties, which is creating a copy of your system and inviting researchers, ethical hackers, penetration testers to test and if they find something they get paid.</p>
+<h3>Helpful Policies, Standards and Guildlines</h3>
 
   </div>
 
